--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,20 @@
-# Dependencies 
-/frontend/node_modules 
-/backend/venv 
-__pycache__/ 
-*.py[cod] 
- 
-# Environment variables 
-.env 
-.env.local 
-.env.development.local 
-.env.test.local 
-.env.production.local 
- 
-# Build files 
-/frontend/build 
-/frontend/dist 
- 
-# Debug logs 
-npm-debug.log* 
-yarn-debug.log* 
-yarn-error.log* 
- 
-# IDE specific files 
-.idea/ 
-.vscode/ 
-*.swp 
-*.swo 
- 
-# Mac specific files 
-.DS_Store 
- 
-# Uploaded documents 
-/backend/uploads/ 
+# Dependencies
+/frontend/node_modules
+/backend/venv
+__pycache__/
+*.pyc
+
+# Environment variables
+.env
+
+# Build files
+/frontend/build
+/frontend/dist
+
+# IDE files
+.vscode/
+.idea/
+
+# Misc
+.DS_Store
+*.log
