--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,7 @@ click==8.1.8
 colorama==0.4.6
 distro==1.9.0
 dnspython==2.7.0
+docxtpl==0.16.7
 Flask==3.1.0
 flask-cors==5.0.1
 Flask-JWT-Extended==4.7.1
@@ -26,7 +27,7 @@ pydantic_core==2.27.2
 PyJWT==2.10.1
 pymongo==4.11.2
 PyPDF2==3.0.1
-python-docx==1.1.2
+python-docx==0.8.11
 python-dotenv==1.0.1
 pytz==2025.1
 six==1.17.0
