--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
     "@testing-library/user-event": "^13.5.0",
     "ajv": "^8.12.0",
     "ajv-keywords": "^5.1.0",
-    "axios": "^1.6.2",
+    "axios": "^1.8.4",
+    "html2canvas": "^1.4.1",
     "http-proxy-middleware": "^2.0.6",
+    "jspdf": "^3.0.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
