--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,16 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.17.1",
     "@mui/material": "^5.14.0",
+    "@mui/x-date-pickers": "^5.0.20",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "ajv": "^8.12.0",
     "ajv-keywords": "^5.1.0",
     "axios": "^1.8.4",
+    "date-fns": "^2.30.0",
     "html2canvas": "^1.4.1",
     "http-proxy-middleware": "^2.0.6",
     "jspdf": "^3.0.1",
